--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body {
   color: #040000;
 }
 
+.img-logo-header {
+  width: 100px;
+}
+
 .layout_padding {
   padding-top: 120px;
   padding-bottom: 120px;
