--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ a:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 20px;
+  margin: 20px;
 }
 
 .client_section .owl-carousel .owl-nav button {
