modifier style de navbar

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ a:focus {
   background-color: #d1e3ff;
 }
 
+.header_section {
+  background: #d1e3ff;
+}
+
 .header_section .container-fluid {
   padding-right: 25px;
   padding-left: 25px;
@@ -143,9 +147,11 @@ a:focus {
   padding: 10px 25px;
   color: #000000;
   text-align: center;
+  font-weight: 600;
 }
 
-.custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
+.custom_nav-container .navbar-nav .nav-item:hover .nav-link,
+.custom_nav-container .navbar-nav .nav-item.active .nav-link {
   color: #0355cc;
 }
 
